[package]
name = "yaml-repair"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Repair messy YAML emitted by LLMs: strip markdown fences, tabs->spaces, dedent leading whitespace, normalize line endings. Returns cleaned text suitable for any YAML parser. Zero deps."
authors = ["Mukunda Rao Katta <mukunda.vjcs6@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/MukundaKatta/yaml-repair"
homepage = "https://github.com/MukundaKatta/yaml-repair"
documentation = "https://docs.rs/yaml-repair"
readme = "README.md"
keywords = ["yaml", "repair", "llm", "sanitize", "parse"]
categories = ["text-processing", "parsing"]
exclude = [".github/*", "target/*"]
